# RM

auto_car/devel/: .catkin  .rosinstall  setup.sh
auto_car/devel/lib/console/: console
auto_car/devel/lib/logical_core/: logical_core
auto_car/devel/lib/move_base/: move_base
auto_car/devel/lib/odometry/: vel2odom
auto_car/devel/lib/pkgconfig/: car_2d_nav.pc  console.pc  move_base.pc  odometry.pc  rplidar_ros.pc  serial_comm.pc  tf_tree.pc
auto_car/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
auto_car/devel/lib/serial_comm/: comm_read  comm_write
auto_car/devel/lib/tf_tree/: tf_broadcaster
auto_car/src/tf_tree/: CMakeLists.txt
auto_car/src/vision_unit/: tags
baxter_ws/: baxter.sh  frames.gv
baxter_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
baxter_ws/install/: .rosinstall  setup.sh
baxter_ws/lula_ubuntu1404/: README.md  install_deb  install_dependencies  lula.deb
baxter_ws/src/: .rosinstall  .rosinstall.bak
baxter_ws/update/: README.abb.md  README.baxter.md  README.md  install_dependencies
leroy_ws/devel/: .catkin  .rosinstall  setup.sh
leroy_ws/src/calibration/: align_kinect_to_baxter.py
leroy_ws/src/grab/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  click  click.cpp  cmake_install.cmake  grab.py  grab.yaml
leroy_ws/src/tfLearning/: test.py
lula/: man
lula/baxter/: man
lula/yumi/: man
recognize_digits/: cv2  find_obj.py  imutils  new_recognize_digits.py  old_test.py  old_test2.py  recognize_digits.py  recognize_digits_1.py  test.py
shit_ws/devel/: .catkin  .rosinstall  setup.sh
(+313 files in other folders)
